# TorchVI

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  requirements.txt
.metals/: metals.lock.db
abinitio/: 00_simple_gaussian.py  00_simple_gaussian.tex  01_simple_bernoulli.py  01_simple_bernoulli.tex  02_beta_bernoulli.py  02_beta_bernoulli.tex  03_linear_regression.py  03_linear_regression.tex  04_logistic_regression.py  04_logistic_regression.tex  BUILD.bazel  abinitio.bzl  simple_gaussian.py
dep/: BUILD.bazel  latex.bzl
examples/: BUILD.bazel  beta_bernoulli.py  dirichlet_categorical.py  examples.bzl  gaussian_mixture.py  gaussian_mixture_multivariate.py  hierarchical_partial_pooling.py  lasso_linear_regression.py  linear_regression.py  logistic_regression.py  negbinom_regression.py  poisson_regression.py  robust_linear_regression.py  simple_bernoulli.py  simple_categorical.py  simple_gaussian.py  simple_gaussian_multivariate.py
format/: BUILD.bazel  format.bzl  format_py.py
rules/: http_archive_ext.bzl
theory/: BUILD.bazel  introduction.tex  meanfieldsimpl.tex
torchvi/: BUILD.bazel  __init__.py  vmodule.py
torchvi/core/: BUILD.bazel  ast.py  constant.py  constraint.py  vmodule.py
torchvi/vdistributions/: BUILD.bazel  __init__.py  beta.py  constant.py  deterministic.py  dirichlet.py  exponential.py  half_normal.py  laplace.py  normal.py
torchvi/vtensor/: BUILD.bazel  __init__.py  backing.py  cholesky.py  choleskylkj.py  covariance.py  lowerbound.py  lowerupperbound.py  simplex.py  unconstrained.py  utils.py
utils/: BUILD.bazel  fix_seed.py
