load("@py_deps//:requirements.bzl", "requirement")
load("//format:format.bzl", "format_py")
load(":abinitio.bzl", "simple_example")

simple_example("00_simple_gaussian")

simple_example("01_simple_bernoulli")

simple_example("02_beta_bernoulli")

simple_example("03_linear_regression")

simple_example("04_logistic_regression")

format_py(
    name = "fmt",
    srcs = glob(["*.py"]),
)
