load(":examples.bzl", "simple_example")
load("//format:format.bzl", "format_py")

simple_example("simple_gaussian")

simple_example("simple_bernoulli")

simple_example("beta_bernoulli")

simple_example("linear_regression")

simple_example("logistic_regression")

simple_example("simple_categorical")

simple_example("dirichlet_categorical")

simple_example("simple_gaussian_multivariate")

format_py(
    name = "fmt",
    srcs = glob(["*.py"]),
)
