load(":examples.bzl", "simple_example")
load("//format:format.bzl", "format_py")

simple_example("simple_gaussian")

simple_example("simple_bernoulli")

simple_example("beta_bernoulli")

simple_example("linear_regression")

simple_example("logistic_regression")

simple_example("simple_categorical")

simple_example("dirichlet_categorical")

simple_example("simple_gaussian_multivariate")

simple_example("robust_linear_regression")

simple_example("lasso_linear_regression")

simple_example(
    "poisson_regression",
    data = ["@poisson_sim//file"],
    with_pandas = True,
)

simple_example(
    "negbinom_regression",
    data = ["@poisson_sim//file"],
    with_pandas = True,
)

format_py(
    name = "fmt",
    srcs = glob(["*.py"]),
)
