load("@bazel_latex//:latex.bzl", "latex_document")

latex_document(
    name = "introduction",
    srcs = [
        "//dep:mathtools",
        "//dep:setspace",
        "@bazel_latex//packages:amsmath",
        "@bazel_latex//packages:amssymb",
        "@bazel_latex//packages:calc",
        "@bazel_latex//packages:datetime2",
        "@bazel_latex//packages:eufrak",
        "@bazel_latex//packages:geometry",
        "@bazel_latex//packages:hyperref",
    ],
    main = "introduction.tex",
)
