load("//format:format.bzl", "format_py")
load("@py_deps//:requirements.bzl", "requirement")

py_library(
    name = "fix_seed",
    srcs = ["fix_seed.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("torch"),
        requirement("numpy"),
    ],
)

format_py(
    name = "fmt",
    srcs = glob(["*.py"]),
)
