load("//format:format.bzl", "format_py")
load("@py_deps//:requirements.bzl", "requirement")

py_library(
    name = "vdistributions",
    srcs = [
        "__init__.py",
        "beta.py",
        "constant.py",
        "dirichlet.py",
        "half_normal.py",
        "normal.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//torchvi",
        requirement("torch"),
        requirement("numpy"),
    ],
)

format_py(
    name = "fmt",
    srcs = glob(["*.py"]),
)
