load("//format:format.bzl", "format_py")
load("@py_deps//:requirements.bzl", "requirement")

py_library(
    name = "vdistributions",
    srcs = [
        "__init__.py",
        "beta.py",
        "constant.py",
        "dirichlet.py",
        "exponential.py",
        "half_normal.py",
        "laplace.py",
        "normal.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//torchvi/core",
        requirement("torch"),
        requirement("numpy"),
    ],
)

format_py(
    name = "fmt",
    srcs = glob(["*.py"]),
)
