load("//format:format.bzl", "format_py")
load("@py_deps//:requirements.bzl", "requirement")

py_library(
    name = "vtensor",
    srcs = [
        "__init__.py",
        "cholesky.py",
        "covariance.py",
        "lowerbound.py",
        "lowerupperbound.py",
        "simplex.py",
        "unconstrained.py",
        "utils.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//torchvi",
        requirement("torch"),
        requirement("numpy"),
    ],
)

format_py(
    name = "fmt",
    srcs = glob(["*.py"]),
)
